--- a/homepage/css/estilo.css
+++ b/homepage/css/estilo.css
@@ -1,13 +1,33 @@
-.header {
-  height: 95px;
+.header {  
+  display: flex;
+  justify-content: space-between;
+}
 
+.header-list-itens {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.header-list {
+    padding-right: 15px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 900;
 }
 
 .logo {
-    width: 56px;
-    height: 56px;
-    float: left;
-    background: url(../img/logo-acme.png) center center/56px no-repeat;
+    width: 100px;
+    height: 70px;
+    display: flex;
+    align-items: center;
+    padding-left: 30px;
+}
+
+#icon {
+   display: flex;
+   align-items: center;
+   width: 35px;
+   height: 35px;
 }
 
 
@@ -20,6 +40,47 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    width: 100%;
+}
+
+.section-input-title {
+    padding: 0 19.5rem 8px 0    ;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.button-section-input {
+    background-color: #363636;
+    font-size: 15px;
+    font-family: Arial, Helvetica, sans-serif   ;
+    padding: 14px 40px;
+    border-radius: 2px;
+    cursor: pointer;
+}
+
+.container-input {
+    width: 100%;
+    margin-top: 38px;
+}
+
+.button-list-input {
+    width: 30%;
+    color: white;
+    background-color: #363636;  
+    border-radius: 2px;
+    cursor: pointer;
+}
+
+.container-section-input {
+    display: flex;
+}
+
+.container-input-form {
+    display: flex;
+    padding-bottom: 10px;
+}
+
+.search {
+    width: 70%;
 }
 
 .section-form { 
@@ -29,26 +90,44 @@
 }
 
 .section-form-filtros {
-    background: yellowgreen;
     width: 30%;
     text-align: center;
+    padding: 0 4rem;
+    
 }
 
 .title-contrato {
     text-align: left;
+    padding: 12px 0;
+    
 }
 
+.title-filtro{
+    font-weight: 900;
+    font-size: 20px;
+}
 
-.button-list 
+.section-form-list-filtro {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 20px;
+}
 
-.section-form-ibm { 
-    background-color: white;
+.button-list {
+    width: 30%;
+    color: white;
+    background-color: #363636;
+    padding: 12px;
+    border-radius: 2px;
+    cursor: pointer;
+}
+
+.section-form-ibm {   
     width: 30%;
 }
 
-.section-form-tellium {
-    background-color: white;
-    width: 30%;
+.section-form-tellium {   
+    width:  30%;
 }
 
 .section-form-title {
@@ -57,8 +136,7 @@
     padding: 25px 40px;
 }
 
-.section-form-content {
-    background-color: white;
+.section-form-content {    
     padding: 15px 40px 15px;
 }
 
@@ -77,4 +155,16 @@
     padding: 15px;
     border-top: solid 1px  gray;
     font-weight: 600;
+}
+
+.footer {
+    display: flex;
+}
+.footer-list {
+    display: flex;
+    cursor: pointer;
+    padding-left: 112px;
+}
+.logo-footer {
+    margin: 0 auto;
 }
